--- a/Marching Cubes/English.lproj/MainMenu.xib
+++ b/Marching Cubes/English.lproj/MainMenu.xib
@@ -12,9 +12,9 @@
 		</object>
 		<object class="NSMutableArray" key="IBDocument.EditedObjectIDs">
 			<bool key="EncodedWithXMLCoder">YES</bool>
-			<integer value="688"/>
-			<integer value="372"/>
 			<integer value="296"/>
+			<integer value="688"/>
+			<integer value="536"/>
 		</object>
 		<object class="NSArray" key="IBDocument.PluginDependencies">
 			<bool key="EncodedWithXMLCoder">YES</bool>
@@ -322,7 +322,7 @@
 			<object class="NSWindowTemplate" id="68711316">
 				<int key="NSWindowStyleMask">8339</int>
 				<int key="NSWindowBacking">2</int>
-				<string key="NSWindowRect">{{502, 50}, {297, 165}}</string>
+				<string key="NSWindowRect">{{502, 24}, {298, 191}}</string>
 				<int key="NSWTFlags">-461897728</int>
 				<string key="NSWindowTitle">Preferences</string>
 				<string key="NSWindowClass">NSPanel</string>
@@ -336,7 +336,7 @@
 						<object class="NSTextField" id="806092126">
 							<reference key="NSNextResponder" ref="839698140"/>
 							<int key="NSvFlags">292</int>
-							<string key="NSFrame">{{38, 103}, {41, 17}}</string>
+							<string key="NSFrame">{{38, 129}, {41, 17}}</string>
 							<reference key="NSSuperview" ref="839698140"/>
 							<int key="NSViewLayerContentsRedrawPolicy">2</int>
 							<bool key="NSEnabled">YES</bool>
@@ -368,7 +368,7 @@
 						<object class="NSPopUpButton" id="680223638">
 							<reference key="NSNextResponder" ref="839698140"/>
 							<int key="NSvFlags">290</int>
-							<string key="NSFrame">{{84, 98}, {194, 25}}</string>
+							<string key="NSFrame">{{84, 124}, {194, 25}}</string>
 							<reference key="NSSuperview" ref="839698140"/>
 							<int key="NSViewLayerContentsRedrawPolicy">2</int>
 							<bool key="NSEnabled">YES</bool>
@@ -436,7 +436,7 @@
 						<object class="NSSlider" id="94910923">
 							<reference key="NSNextResponder" ref="839698140"/>
 							<int key="NSvFlags">268</int>
-							<string key="NSFrame">{{82, 125}, {198, 21}}</string>
+							<string key="NSFrame">{{82, 151}, {198, 21}}</string>
 							<reference key="NSSuperview" ref="839698140"/>
 							<object class="NSArray" key="NSViewContentFilters">
 								<bool key="EncodedWithXMLCoder">YES</bool>
@@ -476,7 +476,7 @@
 						<object class="NSTextField" id="491803029">
 							<reference key="NSNextResponder" ref="839698140"/>
 							<int key="NSvFlags">268</int>
-							<string key="NSFrame">{{17, 128}, {62, 17}}</string>
+							<string key="NSFrame">{{17, 154}, {62, 17}}</string>
 							<reference key="NSSuperview" ref="839698140"/>
 							<int key="NSViewLayerContentsRedrawPolicy">2</int>
 							<bool key="NSEnabled">YES</bool>
@@ -496,7 +496,7 @@
 						<object class="NSTextField" id="37267650">
 							<reference key="NSNextResponder" ref="839698140"/>
 							<int key="NSvFlags">292</int>
-							<string key="NSFrame">{{17, 20}, {61, 17}}</string>
+							<string key="NSFrame">{{17, 46}, {61, 17}}</string>
 							<reference key="NSSuperview" ref="839698140"/>
 							<int key="NSViewLayerContentsRedrawPolicy">2</int>
 							<bool key="NSEnabled">YES</bool>
@@ -513,7 +513,7 @@
 						<object class="NSButton" id="872342971">
 							<reference key="NSNextResponder" ref="839698140"/>
 							<int key="NSvFlags">268</int>
-							<string key="NSFrame">{{81, 18}, {18, 18}}</string>
+							<string key="NSFrame">{{81, 44}, {18, 18}}</string>
 							<reference key="NSSuperview" ref="839698140"/>
 							<object class="NSArray" key="NSViewContentFilters">
 								<bool key="EncodedWithXMLCoder">YES</bool>
@@ -559,7 +559,7 @@
 						<object class="NSTextField" id="791026453">
 							<reference key="NSNextResponder" ref="839698140"/>
 							<int key="NSvFlags">292</int>
-							<string key="NSFrame">{{17, 73}, {62, 17}}</string>
+							<string key="NSFrame">{{17, 99}, {62, 17}}</string>
 							<reference key="NSSuperview" ref="839698140"/>
 							<int key="NSViewLayerContentsRedrawPolicy">2</int>
 							<bool key="NSEnabled">YES</bool>
@@ -576,7 +576,7 @@
 						<object class="NSPopUpButton" id="537182281">
 							<reference key="NSNextResponder" ref="839698140"/>
 							<int key="NSvFlags">268</int>
-							<string key="NSFrame">{{84, 68}, {194, 25}}</string>
+							<string key="NSFrame">{{84, 94}, {194, 25}}</string>
 							<reference key="NSSuperview" ref="839698140"/>
 							<int key="NSViewLayerContentsRedrawPolicy">2</int>
 							<bool key="NSEnabled">YES</bool>
@@ -643,7 +643,7 @@
 						<object class="NSTextField" id="1061719153">
 							<reference key="NSNextResponder" ref="839698140"/>
 							<int key="NSvFlags">292</int>
-							<string key="NSFrame">{{151, 44}, {107, 17}}</string>
+							<string key="NSFrame">{{151, 70}, {107, 17}}</string>
 							<reference key="NSSuperview" ref="839698140"/>
 							<int key="NSViewLayerContentsRedrawPolicy">2</int>
 							<bool key="NSEnabled">YES</bool>
@@ -660,7 +660,7 @@
 						<object class="NSButton" id="1058442805">
 							<reference key="NSNextResponder" ref="839698140"/>
 							<int key="NSvFlags">268</int>
-							<string key="NSFrame">{{261, 42}, {19, 18}}</string>
+							<string key="NSFrame">{{261, 68}, {19, 18}}</string>
 							<reference key="NSSuperview" ref="839698140"/>
 							<object class="NSArray" key="NSViewContentFilters">
 								<bool key="EncodedWithXMLCoder">YES</bool>
@@ -701,7 +701,7 @@
 						<object class="NSTextField" id="195265255">
 							<reference key="NSNextResponder" ref="839698140"/>
 							<int key="NSvFlags">292</int>
-							<string key="NSFrame">{{17, 45}, {61, 17}}</string>
+							<string key="NSFrame">{{17, 71}, {61, 17}}</string>
 							<reference key="NSSuperview" ref="839698140"/>
 							<int key="NSViewLayerContentsRedrawPolicy">2</int>
 							<bool key="NSEnabled">YES</bool>
@@ -718,7 +718,7 @@
 						<object class="NSButton" id="829177664">
 							<reference key="NSNextResponder" ref="839698140"/>
 							<int key="NSvFlags">268</int>
-							<string key="NSFrame">{{81, 43}, {18, 18}}</string>
+							<string key="NSFrame">{{81, 69}, {18, 18}}</string>
 							<reference key="NSSuperview" ref="839698140"/>
 							<object class="NSArray" key="NSViewContentFilters">
 								<bool key="EncodedWithXMLCoder">YES</bool>
@@ -759,7 +759,7 @@
 						<object class="NSTextField" id="891159415">
 							<reference key="NSNextResponder" ref="839698140"/>
 							<int key="NSvFlags">292</int>
-							<string key="NSFrame">{{130, 19}, {127, 17}}</string>
+							<string key="NSFrame">{{130, 45}, {127, 17}}</string>
 							<reference key="NSSuperview" ref="839698140"/>
 							<int key="NSViewLayerContentsRedrawPolicy">2</int>
 							<bool key="NSEnabled">YES</bool>
@@ -776,7 +776,7 @@
 						<object class="NSButton" id="707841517">
 							<reference key="NSNextResponder" ref="839698140"/>
 							<int key="NSvFlags">268</int>
-							<string key="NSFrame">{{261, 17}, {18, 18}}</string>
+							<string key="NSFrame">{{261, 43}, {18, 18}}</string>
 							<reference key="NSSuperview" ref="839698140"/>
 							<object class="NSArray" key="NSViewContentFilters">
 								<bool key="EncodedWithXMLCoder">YES</bool>
@@ -814,8 +814,35 @@
 								<int key="NSPeriodicInterval">25</int>
 							</object>
 						</object>
+						<object class="NSProgressIndicator" id="42574034">
+							<reference key="NSNextResponder" ref="839698140"/>
+							<int key="NSvFlags">1292</int>
+							<object class="NSPSMatrix" key="NSDrawMatrix"/>
+							<string key="NSFrame">{{17, 15}, {16, 16}}</string>
+							<reference key="NSSuperview" ref="839698140"/>
+							<int key="NSViewLayerContentsRedrawPolicy">2</int>
+							<int key="NSpiFlags">28938</int>
+							<double key="NSMaxValue">100</double>
+						</object>
+						<object class="NSTextField" id="72473582">
+							<reference key="NSNextResponder" ref="839698140"/>
+							<int key="NSvFlags">268</int>
+							<string key="NSFrame">{{38, 15}, {243, 17}}</string>
+							<reference key="NSSuperview" ref="839698140"/>
+							<int key="NSViewLayerContentsRedrawPolicy">2</int>
+							<bool key="NSEnabled">YES</bool>
+							<object class="NSTextFieldCell" key="NSCell" id="152445992">
+								<int key="NSCellFlags">68288064</int>
+								<int key="NSCellFlags2">272630784</int>
+								<string key="NSContents">Progress message</string>
+								<reference key="NSSupport" ref="821947828"/>
+								<reference key="NSControlView" ref="72473582"/>
+								<reference key="NSBackgroundColor" ref="1010213033"/>
+								<reference key="NSTextColor" ref="957481204"/>
+							</object>
+						</object>
 					</object>
-					<string key="NSFrameSize">{297, 165}</string>
+					<string key="NSFrameSize">{298, 191}</string>
 					<reference key="NSSuperview"/>
 					<bool key="NSViewIsLayerTreeHost">YES</bool>
 					<int key="NSViewLayerContentsRedrawPolicy">2</int>
@@ -828,6 +855,7 @@
 					<bool key="EncodedWithXMLCoder">YES</bool>
 					<string>value</string>
 					<string>name</string>
+					<string>color</string>
 				</object>
 				<bool key="NSEditable">YES</bool>
 				<object class="_NSManagedProxy" key="_NSManagedProxy"/>
@@ -836,6 +864,14 @@
 				<bool key="NSSelectsInsertedObjects">YES</bool>
 				<bool key="NSFilterRestrictsInsertion">YES</bool>
 				<bool key="NSClearsFilterPredicateOnInsertion">YES</bool>
+			</object>
+			<object class="NSObjectController" id="11933563">
+				<object class="NSMutableArray" key="NSDeclaredKeys">
+					<bool key="EncodedWithXMLCoder">YES</bool>
+					<string>color</string>
+				</object>
+				<bool key="NSEditable">YES</bool>
+				<object class="_NSManagedProxy" key="_NSManagedProxy"/>
 			</object>
 		</object>
 		<object class="IBObjectContainer" key="IBDocument.Objects">
@@ -1157,6 +1193,46 @@
 					</object>
 					<int key="connectionID">923</int>
 				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">spinner</string>
+						<reference key="source" ref="474576243"/>
+						<reference key="destination" ref="42574034"/>
+					</object>
+					<int key="connectionID">928</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">colorController</string>
+						<reference key="source" ref="474576243"/>
+						<reference key="destination" ref="11933563"/>
+					</object>
+					<int key="connectionID">942</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBBindingConnection" key="connection">
+						<string key="label">contentObject: selection</string>
+						<reference key="source" ref="11933563"/>
+						<reference key="destination" ref="883890312"/>
+						<object class="NSNibBindingConnector" key="connector">
+							<reference key="NSSource" ref="11933563"/>
+							<reference key="NSDestination" ref="883890312"/>
+							<string key="NSLabel">contentObject: selection</string>
+							<string key="NSBinding">contentObject</string>
+							<string key="NSKeyPath">selection</string>
+							<int key="NSNibBindingConnectorVersion">2</int>
+						</object>
+					</object>
+					<int key="connectionID">961</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">label</string>
+						<reference key="source" ref="474576243"/>
+						<reference key="destination" ref="72473582"/>
+					</object>
+					<int key="connectionID">971</int>
+				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
 				<object class="NSArray" key="orderedObjects">
@@ -1369,6 +1445,8 @@
 							<reference ref="829177664"/>
 							<reference ref="37267650"/>
 							<reference ref="872342971"/>
+							<reference ref="42574034"/>
+							<reference ref="72473582"/>
 						</object>
 						<reference key="parent" ref="68711316"/>
 					</object>
@@ -1690,6 +1768,30 @@
 						<reference key="object" ref="144840817"/>
 						<reference key="parent" ref="0"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">927</int>
+						<reference key="object" ref="42574034"/>
+						<reference key="parent" ref="839698140"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">939</int>
+						<reference key="object" ref="11933563"/>
+						<reference key="parent" ref="0"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">969</int>
+						<reference key="object" ref="72473582"/>
+						<object class="NSMutableArray" key="children">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<reference ref="152445992"/>
+						</object>
+						<reference key="parent" ref="839698140"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">970</int>
+						<reference key="object" ref="152445992"/>
+						<reference key="parent" ref="72473582"/>
+					</object>
 				</object>
 			</object>
 			<object class="NSMutableDictionary" key="flattenedProperties">
@@ -1812,9 +1914,16 @@
 					<string>905.IBPluginDependency</string>
 					<string>906.IBPluginDependency</string>
 					<string>907.IBPluginDependency</string>
-					<string>919.IBPluginDependency</string>
 					<string>92.IBPluginDependency</string>
 					<string>92.ImportedFromIB2</string>
+					<string>927.IBPluginDependency</string>
+					<string>927.IBViewIntegration.shadowBlurRadius</string>
+					<string>927.IBViewIntegration.shadowColor</string>
+					<string>927.IBViewIntegration.shadowOffsetHeight</string>
+					<string>927.IBViewIntegration.shadowOffsetWidth</string>
+					<string>939.IBPluginDependency</string>
+					<string>969.IBPluginDependency</string>
+					<string>970.IBPluginDependency</string>
 				</object>
 				<object class="NSMutableArray" key="dict.values">
 					<bool key="EncodedWithXMLCoder">YES</bool>
@@ -1891,9 +2000,9 @@
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<integer value="1"/>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
-					<string>{{378, 316}, {297, 165}}</string>
+					<string>{{378, 290}, {298, 191}}</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
-					<string>{{378, 316}, {297, 165}}</string>
+					<string>{{378, 290}, {298, 191}}</string>
 					<boolean value="YES"/>
 					<boolean value="NO"/>
 					<boolean value="NO"/>
@@ -1944,8 +2053,15 @@
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
-					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<integer value="1"/>
+					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<real value="4"/>
+					<reference ref="957481204"/>
+					<real value="0.0"/>
+					<real value="0.0"/>
+					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 				</object>
 			</object>
 			<object class="NSMutableDictionary" key="unlocalizedProperties">
@@ -1964,7 +2080,7 @@
 				</object>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">923</int>
+			<int key="maxID">971</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -2023,8 +2139,21 @@
 						</object>
 					</object>
 					<object class="NSMutableDictionary" key="outlets">
-						<string key="NS.key.0">startingWindow</string>
-						<string key="NS.object.0">NSWindow</string>
+						<bool key="EncodedWithXMLCoder">YES</bool>
+						<object class="NSArray" key="dict.sortedKeys">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>colorController</string>
+							<string>label</string>
+							<string>spinner</string>
+							<string>startingWindow</string>
+						</object>
+						<object class="NSMutableArray" key="dict.values">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>NSObjectController</string>
+							<string>NSTextField</string>
+							<string>NSProgressIndicator</string>
+							<string>NSWindow</string>
+						</object>
 					</object>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
@@ -2463,6 +2592,14 @@
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBFrameworkSource</string>
 						<string key="minorKey">AppKit.framework/Headers/NSPopUpButtonCell.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">NSProgressIndicator</string>
+					<string key="superclassName">NSView</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBFrameworkSource</string>
+						<string key="minorKey">AppKit.framework/Headers/NSProgressIndicator.h</string>
 					</object>
 				</object>
 				<object class="IBPartialClassDescription">
